public/stylesheet/stylesheet.css
/* ... */
.customer-logos-section::before {
  content: "";
  position: absolute;
  top: -20%;
  left: 50%;
  transform: translateX(-50%);
  width: 500px;
  height: 200px;
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
  z-index: -1;
  pointer-events: none;
}
@media (max-width: 1629px) {

}
@media (max-width: 768px) {
 
  .logos-grid{
    column-gap: 30px;
  }
  .logos-grid .customer-icon{
    width:7rem ;
  }
  .customer-logos-header h3{
    font-size: 2rem;
  }
}
@media (max-width: 576px) {
.customer-logos-section::before{
  width: 300px;
}
  .logos-grid .customer-icon{
    width:6rem ;
  }
  .logos-grid{

    column-gap: 10px;
  }
}



/*Why Choose us Section */
#whychooseus { 
  height: auto;
  padding: 50px 20px;
  background-color: #101010;
  color: white;

}
.caption {
  margin-bottom: 30px;
}

.why {
  font-size: 10rem;
  font-weight: 700;
  line-height: 1.2; 
  color: white;
  position: relative; 
}

.choose-us {
  font-family: 'Montserrat', sans-serif; 
    font-weight: bold;
    font-style: normal;
  position: absolute;
  bottom: -8%; 
  left: 7%; 
  font-size: 3rem;
  font-weight: 500;
  color: white;
}
.caption .subtitle {
  font-size: 1.2rem;
  color: rgba(255, 255, 255, 0.8);
  margin-top: 10px;
}
.infographic {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 100px;
}
.infographic-row {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width:100%;
}
.center-items{
  gap: 0 100px;
}
.infographic-item {
  display: flex;
  align-items: center;
  text-align: left;
  width: 70%;
}
.infographic-item h3 {
  color: white;
  font-size: 1.5rem;
  margin-bottom: 10px;
}
.infographic-item p {
  color: rgba(255, 255, 255, 0.8);
  font-size: 1rem;
  line-height: 1.6;
}
.circle-bg {
  background-color: #FF007F;
  width: 250px;
  height: 100px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
}
.circle-bg img {
  width: 150%;
  height: 150%;
}
.circle-bg-ce {
  background-color: #FF007F;
  width: 230px;
  height: 80px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
}
.circle-bg-ce img {
  width: 190%;
  height: 190%;
}
.circle-bg-td {
  background-color: #FF007F;
  width: 240px;
  height: 80px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
  position: relative;
}
.circle-bg-td img {
  width: 180%;
  height: 180%;
}
.circle-bg-ae {
  background-color: #FF007F;
  width: 250px;
  height: 85px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
  position: relative;
}
.circle-bg-ae img {
  width: 250%;
  height: 160%;
}
.circle-bg-ees {
  background-color: #FF007F;
  width: 220px;
  height: 90px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 20px;
  position: relative;
}
.circle-bg-ees img {
  width: 170%;
  height: 160%;
}
.circle-bg-ce .svg-connector-ce {
  width: 200px;
  height: 265px;
  position: absolute;
  top: 100%; 
  left: 2%;
  transform: translateY(-50%);
}
.svg-connector-ce .connector-path-ce {
  fill: none;
  stroke: #ff007f;
  stroke-width: 8;
  stroke-dasharray: 20, 6;
  stroke-linecap: round; 
}
.circle-bg-td .svg-connector-td {
  width: 300px; 
  height: 100px; 
  position: absolute;
  top: -30%; 
  left: 320%; 
  transform: translateY(-50%) rotate(-180deg);
}
.svg-connector-td .connector-path-td {
  fill: none; 
  stroke: #FF007F; 
  stroke-width: 6;
  stroke-dasharray: 20, 6; 
}
.circle-bg-ae .svg-connector-ae {
  width: 300px; 
  height: 150px;
  position: absolute;
  top: 210%; 
  left: 30%; 
  transform: translateY(-50%) rotate(-180deg); 
}
.svg-connector-ae .connector-path-ae {
  fill: none; 
  stroke: #FF007F; 
  stroke-width: 7;
  stroke-dasharray: 20, 6; 
}

@media (max-width: 1629px) {
  #whychooseus .why {
    font-size: 8rem;
  }
  #whychooseus .choose-us {
    font-size:2.5rem;
    left: 0%;
  }
  #whychooseus .subtitle, #whychooseus .infographic-item h3 {
    font-size: 1rem;
  }
  #whychooseus .infographic-item p {
    font-size: 0.9rem;
  }
  .circle-bg img {
    width: 140%;
    height: 140%;
  }
  .circle-bg-td .svg-connector-td{
    top: -20%; 
    left: 230%; 
  }
  .center-items{
padding-right: 10rem;

  }
}

@media (max-width: 1422px) {
  #whychooseus h1.why {
    font-size: 7rem;
  }
  #whychooseus .choose-us {
    font-size: 2.2rem;
  }
  #whychooseus .subtitle, #whychooseus .infographic-item h3 {
    font-size: 0.95rem;
  }
  #whychooseus .infographic-item p {
    font-size: 0.85rem;
  }
  .circle-bg img {
    width: 130%;
    height: 130%;
  }
}
@media (max-width: 1300px) {
  #whychooseus h1.why {
    font-size: 6rem;
  }
  #whychooseus .choose-us {
    font-size: 2rem;
  }
  #whychooseus .subtitle, #whychooseus .infographic-item h3 {
    font-size: 0.9rem;
  }
  #whychooseus .infographic-item p {
    font-size: 0.8rem;
  }
  .circle-bg img {
    width: 120%;
    height: 120%;
  }
}
@media (max-width: 1200px) {
  #whychooseus{

    margin-bottom: 0;
  }
  #whychooseus h1.why {
    font-size: 5.5rem;

  }
  #whychooseus .choose-us {
    font-size: 1.8rem;
  }
  #whychooseus .subtitle, #whychooseus .infographic-item h3 {
    font-size: 0.85rem;
  }
  #whychooseus .infographic-item p {
    font-size: 0.75rem;
  }
  .circle-bg img {
    width: 110%;
    height: 110%;
  }
}
@media (max-width: 992px) {
  #whychooseus h1.why {
    font-size: 5.3rem;
  }
  #whychooseus .choose-us {
    font-size: 1.5rem;
  }
  #whychooseus .subtitle, #whychooseus .infographic-item h3 {
    font-size: 0.8rem;
  }
  #whychooseus .infographic-item p {
    font-size: 0.7rem;
  }
  .circle-bg img {
    width: 100%;
    height: 100%;
  }
}
/* ... */

